src/objects/Pay__c.object
<CustomObject>
    <description>Amount you need to pat to your friends</description>
    <fields>
        <fullName>Date_of_Payment__c</fullName>
        <label>Date of Payment</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expense__c</fullName>
        <description>Detail of the expenditure</description>
        <inlineHelpText>Expense for which you are paying</inlineHelpText>
        <label>Expense</label>
        <referenceTo>Expenditure__c</referenceTo>
        <relationshipLabel>Pays</relationshipLabel>
        <relationshipName>Pays</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Pay_To__c</fullName>
        <label>Pay To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anupam</fullName>
                    <default>true</default>
                    <label>Anupam</label>
                </value>
                <value>
                    <fullName>Biman</fullName>
                </value>
                <value>
                    <fullName>Midhun</fullName>
                </value>
                <value>
                    <fullName>Rahul</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Pay</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pay Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pays</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>